fix(rux-switch): add design tokens and align to astro switch spacing standards
* Astro-3866 toggle switch padding

* 3866 spacing changes

* 3866 switch spacing changes with changeset

* final commit

* change from -line-height-sm to calc on spacing

* solve merge conflict

--- a/packages/web-components/src/components/rux-switch/rux-switch.scss
+++ b/packages/web-components/src/components/rux-switch/rux-switch.scss
@@ -1,12 +1,11 @@
 @use '../../common/functional-components/FormFieldMessage/form-field-message.scss';
 :host {
     display: block;
-    padding-left: 1%;
 }
 .rux-switch {
     position: relative;
     display: flex;
-    height: 22px;
+    height: calc(var(--spacing-4) + var(--spacing-1)); //20
     white-space: nowrap;
 
     // Default Styling
@@ -21,11 +20,12 @@
             display: flex;
             content: '';
             border-radius: var(--switch-radius-track);
-            border: 1px solid;
-            border-color: var(--color-border-interactive-muted);
+            border: 0;
+            box-shadow: var(--color-border-interactive-muted) 0 0 0 1px inset;
             background-color: var(--color-background-base-default);
-            height: 10px;
-            width: 30px;
+            height: var(--spacing-3); //12
+            width: var(--spacing-8); //32
+            margin: var(--spacing-1);
             z-index: 2;
             transition: 0.1s background-color linear;
         }
@@ -34,13 +34,13 @@
         &::after {
             position: absolute;
             content: '';
-            top: 1px;
-            left: -4px;
+            left: 0;
             z-index: 3;
-            height: 18px;
-            width: 18px;
+            height: calc(var(--spacing-4) + var(--spacing-1)); //20
+            width: calc(var(--spacing-4) + var(--spacing-1)); //20
             border-radius: var(--radius-circle);
-            border: 1px solid var(--color-background-interactive-default);
+            box-shadow: var(--color-background-interactive-default) 0 0 0 1px
+                inset;
             background-color: var(--color-background-base-default);
             transition: 0.1s left linear, 0.1s border-color linear;
         }
@@ -55,15 +55,17 @@
         &:checked {
             + .rux-switch__button {
                 &::before {
-                    border-color: var(--color-background-interactive-default);
+                    box-shadow: var(--color-background-interactive-default) 0 0
+                        0 1px inset;
                     background-color: var(
                         --color-background-interactive-default
                     );
                 }
                 &::after {
-                    left: 16px;
+                    left: calc(var(--spacing-4) + var(--spacing-1)); //20
                     background-color: var(--color-background-base-default);
-                    border-color: var(--color-background-interactive-default);
+                    box-shadow: var(--color-background-interactive-default) 0 0
+                        0 1px inset;
                 }
             }
         }
@@ -89,7 +91,8 @@
                         );
                     }
                     &::after {
-                        border-color: var(--color-background-interactive-hover);
+                        box-shadow: var(--color-background-interactive-hover) 0
+                            0 0 1px inset;
                     }
                 }
             }
